# eclass-scan

./: README.md  eclass-scan.cabal
.github/workflows/: haskell.yml
src-exe/: Main.hs
src/Distribution/Gentoo/: Eclass.hs
