cabal-version:      3.0
name:               eclass-scan
version:            0.1.0.0
synopsis:           Scan for Gentoo eclass metadata in Haskell
tested-with:        GHC ==9.2.8

-- A longer description of the package.
-- description:
homepage:           https://github.com/hololeap/eclass-scan
bug-reports:        https://github.com/hololeap/cabal-portage/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com
copyright:          Copyright (C) 2023 hololeap
category:           System
extra-source-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/hololeap/cabal-portage/tree/main/portage-hs

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common all
  ghc-options:        -Wall

  if flag(pedantic)
    ghc-options: -Werror

  default-extensions: StrictData

library
  import:           all
  exposed-modules:  Distribution.Gentoo.Eclass

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , attoparsec
    , bytestring
    , conduit
    , conduit-extra >= 1.1.12
    , directory
    , filepath
    , safe-exceptions
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

executable eclass-scan
  import:           all
  ghc-options:      -threaded
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , eclass-scan
    , pretty-simple

  hs-source-dirs:   src-exe
  default-language: Haskell2010

-- test-suite eclass-scan-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:    base ^>=4.16.4.0
